--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -12,7 +12,7 @@
 <!--</form>-->
 
 <h1>登入</h1>
-<p>登入使用更多功能，沒有帳號點擊<a href="." style="color: blue;">註冊</a></p>
+<p>登入使用更多功能，沒有帳號點擊<a href="{% url 'register' %}" style="color: blue;">註冊</a></p>
 
 
 <form method="post" action="{% url 'login' %}">
