--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -12,6 +12,7 @@
     <span class="user">
         {% if request.user.is_authenticated %}
         Hello, {{ request.user.first_name }}
+        /<a href="{% url 'password_change' %}">更改密碼</a>/
         <a href="{% url 'logout' %}">登出</a>
         {% else %}
         <a href="{% url 'login' %}">登入</a>
