--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -11,7 +11,7 @@
     <sapn class="logo">w-social</sapn>
     {% if request.user.is_authenticated %}
     <ul class="menu">
-        <li><a href="{% url 'dashboard' %}"></a></li>
+        <li><a href="{% url 'dashboard' %}">個人資訊</a></li>
         <li><a href="#">圖片</a></li>
     </ul>
     {% endif %}
