--- a/image/templates/image/image_upload.html
+++ b/image/templates/image/image_upload.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% block title %}上傳圖片{% endblock %}
 {% block content %}
 <form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
