--- a/image/templates/image/image_detail.html
+++ b/image/templates/image/image_detail.html
@@ -2,14 +2,35 @@
 {% block title %}圖片資訊{% endblock %}
 {% block content %}
 
-<div>
-<img src="{{ image.image.url }}" style="max-width: 300px;height: auto;display:inline-block;float:left;">
-<div style="display:inline-block;height: 100%;clear: left;">
-    <h2>{{ image.title }}</h2>
-    {{ image.description }}
-    <br>
-    <small>{{ image.created|date:'Y-m-d' }}</small>
+<h1>{{ image.title }}</h1>
+<img src="{{ image.image.url }}" class="image-detail">
+{% with total_likes=image.user_like.count users_like=image.user_like.all %}
+
+<div class="image-info">
+    {% if request.user in users_like %}
+    <a class="count-like" href="{% url 'image:image_dislike' image.id %}">
+        {% if total_likes %}
+        {{ total_likes }}
+        like{{ total_likes|pluralize }}
+        {% else %}
+        {{ total_likes }}
+        like
+        {% endif %}
+    </a>
+    {% else %}
+    <a class="count" href="{% url 'image:image_like' image.id %}">
+        {% if total_likes %}
+        {{ total_likes }}
+        like{{ total_likes|pluralize }}
+        {% else %}
+        {{ total_likes }}
+        like
+        {% endif %}
+    </a>
+    {% endif %}
+    {{ image.description|linebreaks }}
 </div>
-</div>
+
+{% endwith %}
 
 {% endblock %}
