--- a/image/templates/image/image_detail.html
+++ b/image/templates/image/image_detail.html
@@ -8,29 +8,31 @@
 
 <div class="image-info">
     {% if request.user in users_like %}
-    <a class="count-like" href="{% url 'image:image_dislike' image.id %}">
-        {% if total_likes %}
-        {{ total_likes }}
-        like{{ total_likes|pluralize }}
-        {% else %}
+    <button class="count-like">
         {{ total_likes }}
         like
-        {% endif %}
-    </a>
+    </button>
     {% else %}
-    <a class="count" href="{% url 'image:image_like' image.id %}">
-        {% if total_likes %}
-        {{ total_likes }}
-        like{{ total_likes|pluralize }}
-        {% else %}
+    <button class="count">
         {{ total_likes }}
         like
-        {% endif %}
-    </a>
+    </button>
     {% endif %}
     {{ image.description|linebreaks }}
 </div>
 
 {% endwith %}
-
+<script>
+    $("button").click(function () {
+        $.ajax({
+            url: "/image/like/{{image.id}}", success: function (result) {
+                if (result['status'] == 'success') {
+                    $("button").removeClass()
+                    $("button").addClass(result['image_status'])
+                    $("button").text(result['number']+' like')
+                }
+            }
+        });
+    });
+</script>
 {% endblock %}
