--- a/image/templates/image/image_list.html
+++ b/image/templates/image/image_list.html
@@ -5,8 +5,8 @@
 <h1>圖片</h1>
 <p>上傳圖片請點<a href="{% url 'image:image_upload' %}">這裡</a></p>
 
-
-{% for image in images %}
+<div id="image-list" >
+    {% for image in images %}
 <div class="image">
     <a href="{{ image.get_absolute_url }}">
         {% thumbnail image.image "300x300" crop="100%" as im %}
@@ -21,6 +21,9 @@
         </a></div>
 </div>
 {% endfor %}
+
+</div>
+
 
 
 {% endblock %}
