--- a/image/templates/image/image_upload_done.html
+++ b/image/templates/image/image_upload_done.html
@@ -2,4 +2,5 @@
 {% block title %}上傳成功{% endblock %}
 {% block content %}
 <h3>上傳成功</h3>
+<a href="{% url 'image:image_list' %}">返回圖片列表</a>
 {% endblock %}
