--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -14,11 +14,12 @@
     <ul class="menu">
         <li><a href="{% url 'dashboard' %}">個人資訊</a></li>
         <li><a href="{% url 'image:image_list' %}">圖片</a></li>
+        <li><a href="{% url 'user_list' %}">用戶列表</a></li>
     </ul>
     {% endif %}
     <span class="user">
         {% if request.user.is_authenticated %}
-        Hello, {{ request.user.first_name }}
+        Hello, <a href="{% url 'profile' request.user.username %}">{{ request.user.first_name }}</a>
         /<a href="{% url 'password_change' %}">更改密碼</a>/
         <a href="{% url 'logout' %}">登出</a>
         {% else %}
